<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"

    android:layout_marginRight="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Registration form"
        android:textAllCaps="true"
        android:fontFeatureSettings="@string/hint_password"
        android:textSize="20dp"
        android:fontFamily="sans-serif"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:onClick="pick_image"
        android:layout_marginTop="10dp"
        android:src="@drawable/man" />




    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@+id/profile"
        android:background="#edeaea"
        android:layout_height="match_parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="2dp">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="468dp"
                android:gravity="top|bottom"
                android:orientation="vertical"
                android:padding="20dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signup_input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signup_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:hint="Email" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signup_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/txtPwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:hint="@string/hint_password" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signup_input_layout_dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/signup_input_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:singleLine="true"
                        android:focusableInTouchMode="true"

                        android:hint="@string/hint_dob"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:singleLine="true"

                        android:hint="Village Name"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/Adharno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/adharcardno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:singleLine="true"
                        android:focusableInTouchMode="true"

                        android:hint="Aadhar card No"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/districtvalue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:singleLine="true"
                        android:focusableInTouchMode="true"

                        android:hint="District"/>
                </android.support.design.widget.TextInputLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp">
                    <TextView
                        android:id="@+id/gender_textview"
                        android:paddingRight="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_gender"
                        android:fontFeatureSettings="@string/hint_password"
                        android:textSize="20dp"
                        android:fontFamily="@string/hint_password"/>
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/gender_textview"
                        android:id="@+id/radio"
                        android:orientation="horizontal"
                        >
                        <RadioButton
                            android:id="@+id/male_radio_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:checked="true"
                            />
                        <RadioButton
                            android:id="@+id/female_radio_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "@string/female"
                            />
                    </RadioGroup>
                </RelativeLayout>


                <Button android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_sign_up"
                    android:background="@drawable/button_rounded_corners_gradient"
                    android:layout_marginTop="30dp"
                    android:onClick="Register"
                    android:textColor="@android:color/white"/>



            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</RelativeLayout>